--- a/locales/en/kafka.json
+++ b/locales/en/kafka.json
@@ -24,5 +24,50 @@
   "short_description": "Short Description",
   "storage": "Storage",
   "storage_value": "up to 1000 GiB",
-  "will_expire": "This instance will expire in <time>{{time}}</time>"
+  "will_expire": "This instance will expire in <time>{{time}}</time>",
+  "consumerGroup": {
+    "consumer_groups": "Consumer groups",
+    "consumer_group_id": "Consumer group ID",
+    "consumer_group_list": "Consumer group list",
+    "consumer_group_search_input": "Consumer group search input",
+    "consumer_group_search": "Search consumer group button",
+    "active_members": "Active members",
+    "active_members_for_topic": "Active members for this topic",
+    "partitions_with_lag_for_topic": "Partitions with lag in this topic",
+    "unassigned": "unassigned",
+    "partitions_with_lag": "Partitions with lag",
+    "partitions_with_lag_name": "Partitions with lag",
+    "partitions_with_lag_description": "Partitions with lag shows the number of partitions where the assigned consumer has not caught up with the last message in the partition. The offset lag of a partition reflects the current offset position of a consumer in relation to the end of the partition log. Use this number to identify any delay in the consumption of messages. To reduce consumer lag, you typically add new consumers to a group.",
+    "uncosumed_partitions": "Unconsumed partitions",
+    "uncosumed_partitions_for_topic": "Unconsumed partitions for this topic",
+    "state": "State",
+    "partition": "Partition",
+    "client_id": "Client ID",
+    "member_id": "Member ID",
+    "consumer_id": "Consumer ID",
+    "current_offset": "Current offset",
+    "log_end_offset": "Log end offset",
+    "offset_lag": "Offset lag",
+    "new_offset": "New offset",
+    "reset_offset": "Reset offset",
+    "topic_table_aria": "table for consumer groups by topic",
+    "consumer_group_info_table_aria": "table for consumer group details",
+    "delete": "Delete consumer group?",
+    "consumergroup_successfully_deleted": "Successfully deleted consumer group {{name}}",
+    "search": "Search consumer groups",
+    "no_result": "No consumer groups found",
+    "empty_list": "No consumer groups yet",
+    "empty_consumer_title": "No consumer groups",
+    "view_partitions_offsets": "View partition offsets",
+    "empty_consumer_body": "When configuring an application client to access Kafka, assign a group ID to associate the consumer with a consumer group.",
+    "reset_offset_accept": "I understand that by resetting the offset position, I risk clients skipping or duplicating messages.",
+    "reset_offset_connected_alert_title": "The offset for this consumer group cannot be reset at this time",
+    "reset_offset_connected_alert_body": "One or more members of the consumer group are currently connected to a topic. All members of a consumer group must be disconnected before resetting the offset.",
+    "offset_successfully_reset": "offsets for the consumer group have been successfully reset",
+    "delete_consumer_connected_alert_title": "The {{name}} consumer group cannot be deleted at this time",
+    "delete_consumer_connected_alert_body": "One or more members are currently connected to a topic. All members of a consumer group that are connected to topic must be disconnected before deleting the consumer group."
+  },
+  "topic": {
+    "topic": "Topic"
+  }
 }
